Fixed spacing issue for album art and spotify code.

--- a/style.css
+++ b/style.css
@@ -36,14 +36,15 @@ body {
     filter: drop-shadow(15px 15px 7px rgba(0, 0, 0, 0.5));
     opacity: 1;
     transition: all 0.5s ease;
-    width: 960px;
-    height: 540px;
+    width: 1920px;
+    height: 1080px;
     margin: 0px; /* Center with auto margins */
     display: grid;
     align-items:center;
 }
 
 #albumArtBox {
+    padding-left:50px;
     position: absolute;
     width: 200px;
     height: 200px;
@@ -65,7 +66,7 @@ body {
     border-radius: var(--corner-radius);
     width: 800px;
     height: 200px;
-    padding-left: 350px;
+    padding-left: 300px;
     filter: drop-shadow(15px 15px 7px rgba(0, 0, 0, 0.5));
 }
 
